Update after initial data treatment

--- a/sub_sections/device_classification.archive.yaml
+++ b/sub_sections/device_classification.archive.yaml
@@ -9,6 +9,7 @@ definitions:
             type_data:
               - 'Monolithic'
               - 'Stacked'
+              - 'Laminated'
               - 'Spectral_splitter'
               - 'Wide_bandgap_cell_used_as_reflector'
               - '...'
